# beavers

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  justfile  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  publish.yaml
beavers/: __init__.py  arrow.py  dag.py  engine.py  kafka.py  live.py  pandas_wrapper.py  perspective_wrapper.py  polars_wrapper.py  pyarrow_kafka.py  pyarrow_replay.py  pyarrow_wrapper.py  replay.py  table.html  testing.py
docs/: SUMMARY.md  contributing.md  development.md  faq.md  index.md  install.md  requirements.in  requirements.txt
docs/api/: engine.md  replay.md
docs/concepts/: 1_dag.md  2_advanced.md  3_replay.md  4_kafka.md  5_pyarrow.md  advanced.md  dag.md  kafka.md  pandas.md  perspective.md  polars.md  pyarrow.md  replay.md
docs/reference/: arrow.md  dag.md  engine.md  kafka.md  pandas_wrapper.md  pyarrow_wrapper.md  replay.md
examples/: advanced_concepts.py  dag_concepts.py  etfs.py  kafka_concepts.py  pandas_concepts.py  perspective_concepts.py  polars_concepts.py  pyarrow_concepts.py  replay_concepts.py
scripts/: README.md  kafka_test_bench.py  perpective_test_bench.py
tests/: __init__.py  test_arrow.py  test_dag.py  test_docs.py  test_engine.py  test_etfs.py  test_kafka.py  test_pandas_wrapper.py  test_perpective_wrapper.py  test_polars_wrapper.py  test_pyarrow_kafka.py  test_pyarrow_replay.py  test_pyarrow_wrapper.py  test_replay.py  test_util.py
